creusot/tests/should_fail/prusti/calls/cur_fin.stderr
error[creusot]: expected `&mut X` found `creusot_contracts::__stubs::__prusti::Zombie<&'curr mut X>`
  --> cur_fin.rs:13:9
   |
13 |     cur(x)
   |         ^

error: aborting due to previous error

